syntax = "proto3";

option go_package = "github.com/mig-elgt/tsp/proto/table";

service TableService {
  rpc Fetch (FetchRequest) returns (FetchResponse) {}
}

message Stop {
  double Lat = 1;
  double Lng = 2;
}

message FetchRequest {
  repeated Stop Stops = 1;
}

message FetchResponse {
  repeated double Matrix = 1;
}
